src/objects/DesignElement_Items__c.object
<CustomObject>
    <fields>
        <fullName>CH_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CH Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDP_ActiveStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDP_ActiveStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP_LastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDP_LastModifiedDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Modified</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNAbbreviation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAbbreviation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNAdditionalECCCheck__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAdditionalECCCheck</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNAliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAliasName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNAlternateCode2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAlternateCode2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNAlternateCodeSpace2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAlternateCodeSpace2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNAlternateCodeSpace__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAlternateCodeSpace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNAlternateCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAlternateCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNApplicability__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNApplicability</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNApprovedOnBehalfDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNApprovedOnBehalfDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNApprovedOnBehalf__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNApprovedOnBehalf</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNClassification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNClassification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSNCode</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NSNCompaApprovalState__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNCompaApprovalState</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNCompatibilityPlanningResponsible__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNCompatibilityPlanningResponsible</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNContacts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNContacts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNDataUsage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNDataUsage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNDeliveryPackageType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNDeliveryPackageType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNDeliveryPriorityType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNDeliveryPriorityType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNDesignElementDataSpecialist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNDesignElementDataSpecialist</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSNDesignResponsibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNDesignResponsibility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNEndofProductSupport__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNEndofProductSupport</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNEndofRemoteTechnicalService__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNEndofRemoteTechnicalService</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNEndofReturnforRepair__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNEndofReturnforRepair</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNEndofSWMaintenance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNEndofSWMaintenance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNItemUsage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNItemUsage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNLegacyCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNLegacyCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNLegacyNCMCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNLegacyNCMCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNLegacyRevision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNLegacyRevision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNModifiedInSendingSystem__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNModifiedInSendingSystem</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNNameInCustomerNetwork__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNNameInCustomerNetwork</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNOriginalOwnerGroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNOriginalOwnerGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNOriginatedOnBehalf__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNOriginatedOnBehalf</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNOriginatingFromApplication__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNOriginatingFromApplication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNPPVUse__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNPPVUse</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNParentClassification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNParentClassification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNParentOwnerOrganization__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNParentOwnerOrganization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNParentProductCategory__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNParentProductCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNParentReleaseModel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNParentReleaseModel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNParentTL9000__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNParentTL9000</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNPortfolioDataSpecialist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNPortfolioDataSpecialist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNProgramOrProjectManager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNProgramOrProjectManager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNReferences__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNReferences</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NSNSWConfigurationManager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSWConfigurationManager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSWMaintenanceManager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSWMaintenanceManager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSecurityUpdateType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSecurityUpdateType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSummary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSummary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSNUse__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNUse</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NSNUsedPlatform__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNUsedPlatform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Originated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Originated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCommittedActual__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StateCommittedActual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCommittedScheduled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StateCommittedScheduled</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCreateActual__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StateCreateActual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateInitialActual__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StateInitialActual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateInitialScheduled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StateInitialScheduled</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateMaintainActual__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StateMaintainActual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateMaintainScheduled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StateMaintainScheduled</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateObsoleteActual__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StateObsoleteActual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateObsoleteScheduled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StateObsoleteScheduled</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatePlannedActual__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StatePlannedActual</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatePlannedScheduled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StatePlannedScheduled</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DesignElement_Items</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>NSNLegacyCode__c</columns>
        <columns>CH_Processed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DesignElement_Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DesignElement_Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>